--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ compileJava {
     sourceCompatibility = targetCompatibility = '1.8'
 }
 
-version = "v415.37b"
+version = "v415.38"
 group = "gregtechmod"
 archivesBaseName = "gregtechmod"
 
