--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ compileJava {
     sourceCompatibility = targetCompatibility = '1.8'
 }
 
-version = "v416.40"
+version = "v416.41LE"
 group = "gregtechmod"
 archivesBaseName = "gregtechmod"
 
