revert the removal of platinum and bump version

--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ compileJava {
     sourceCompatibility = targetCompatibility = '1.8'
 }
 
-version = "v416.44LE"
+version = "v416.44IB"
 group = "gregtechmod"
 archivesBaseName = "gregtechmod"
 
